--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ header > p{
     text-align: center;
     max-width: 550px;
     padding-bottom: 30px;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     font-size: 1.2em;
     text-shadow: 2px 2px 0px rgb(0, 0, 0, 0.315);
 }
